# neural-forest-

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  LICENSE  PROMPT_1_setup.md  README.md  pyproject.toml  requirements.txt
forest/: __init__.py  config.py
forest/core/: __init__.py  model.py  router.py  spine.py  zone.py
forest/memory/: __init__.py  sqlite_store.py  temporal.py
forest/training/: __init__.py  dataset.py  losses.py  scheduler.py  trainer.py  wandb_logger.py
forest/utils/: __init__.py  benchmarks.py  vram_monitor.py
notebooks/: colab_training.ipynb
scripts/: benchmark.py  train_125m.py  train_500m.py  train_50m.py  train_colab.py
tests/: conftest.py  test_config.py  test_dataset.py  test_model.py  test_router.py  test_scheduler.py  test_spine.py  test_wandb_logger.py  test_zone.py
